<resources>
    <string name="app_name">Novel Reader</string>
    <string name="search_hint">Type book name or author</string>
    <string name="popular">Popular</string>
    <string name="discover">Discover</string>
    <string name="recommended">Recommended</string>
    <string name="more">More</string>
    <string name="recent">Recent</string>
    <string name="home">Home</string>
    <string name="categories">Categories</string>
    <string name="notification">Notifications</string>
    <string name="settings">Settings</string>
    <string name="offline">Offline</string>
    <string name="top_novel">Top Novel</string>
    <string name="no_novels_data">No novels data</string>
    <string name="you_can_be_download_to_save_offline_data">You can be download to save offline data</string>
    <string name="no_notification_found">No notification found</string>
    <string name="updating">Updating</string>
    <string name="no_internet">No Internet</string>
    <string name="lorem" translatable="false">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer convallis mollis iaculis. Sed venenatis turpis volutpat dui iaculis efficitur. Pellentesque auctor, quam at molestie rutrum, mauris leo lacinia leo, eu ultricies sapien nisi ut enim. Sed sit amet arcu leo. Suspendisse potenti. Phasellus elementum placerat sem eget luctus. Fusce lorem orci, lobortis in lacinia vel, volutpat quis augue. Etiam nec velit nulla.
        <br/>Nunc luctus rhoncus nunc quis sodales. Ut et lorem mi. In viverra volutpat urna a tempor. Nunc sed luctus orci. Aliquam porttitor interdum ipsum. In hac habitasse platea dictumst. In hac habitasse platea dictumst. Donec fermentum tempor odio at ultricies.
        <br/>In hac habitasse platea dictumst. Proin vel placerat arcu, ut pellentesque augue. Praesent sit amet odio aliquam, rhoncus purus nec, consectetur arcu. Nulla rutrum condimentum orci id feugiat. Suspendisse varius laoreet sem, eu varius eros. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Aliquam at porttitor enim. Praesent id sagittis nulla, eget aliquam nibh. Suspendisse sagittis pulvinar ante nec laoreet. Ut mauris risus, ultricies ac tortor quis, sollicitudin semper augue.
        <br/>In consectetur dictum rhoncus. Suspendisse pulvinar pellentesque arcu, pretium iaculis mauris. Aliquam erat volutpat. Curabitur vehicula convallis tortor vitae interdum. Curabitur sem sem, consectetur eu sollicitudin eu, hendrerit a purus. Aliquam tempor finibus consectetur. Sed lacinia, lacus vitae ultrices efficitur, neque odio tincidunt ex, in consequat tellus libero et dolor. Nam hendrerit lacus eget ipsum sodales iaculis. Duis et lectus ornare, iaculis est ut, pellentesque lorem.
    </string>
    <string name="views">Views</string>
    <string name="votes">Votes</string>
    <string name="chapters">Chapters</string>
    <string name="comments">Comments</string>
    <string name="download">Download</string>
    <string name="read_book">Read Book</string>
</resources>