<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/primary"
    android:fitsSystemWindows="true"
    tools:context=".activities.NovelDetailActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/imgNovelBlur"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_200sdp"
                android:alpha=".2"
                android:scaleType="centerCrop"
                android:src="@drawable/novel_thumb" />

            <ImageView
                android:id="@+id/imgNovelThumb"
                android:layout_width="@dimen/_120sdp"
                android:layout_height="@dimen/_200sdp"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="@dimen/_10sdp"
                android:scaleType="centerCrop"
                android:src="@drawable/novel_thumb"
                android:translationZ="@dimen/_100sdp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/imgNovelThumb"
                android:layout_marginTop="-60dp"
                android:background="@color/primary"
                android:orientation="vertical"
                android:paddingTop="60dp">

                <TextView
                    android:id="@+id/txtNovelName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:paddingHorizontal="@dimen/_36sdp"
                    android:paddingVertical="@dimen/_10sdp"
                    android:text="Tôi thấy hoa vàng trên cỏ xanh"
                    android:textColor="@color/white"
                    android:textSize="@dimen/_16sdp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/txtNovelAuthor"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:paddingHorizontal="@dimen/_36sdp"
                    android:text="Nguyễn Nhật Ánh"
                    android:textColor="@color/light1"
                    android:textSize="@dimen/_12sdp" />

                <!-- Detail-->
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:gravity="center"
                    android:orientation="horizontal"
                    android:paddingHorizontal="@dimen/_4sdp">

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:orientation="horizontal">

                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginEnd="@dimen/_2sdp"
                            android:src="@drawable/ic_round_remove_red_eye_24"
                            app:tint="@color/light1" />

                        <TextView
                            android:id="@+id/txtNumViews"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginEnd="@dimen/_4sdp"
                            android:text="87,7K"
                            android:textColor="@color/light1" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/views"
                            android:textColor="@color/light1" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:orientation="horizontal">

                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginEnd="@dimen/_2sdp"
                            android:src="@drawable/ic_round_format_list_bulleted_24"
                            app:tint="@color/light1" />

                        <TextView
                            android:id="@+id/txtNumChapters"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginEnd="@dimen/_4sdp"
                            android:text="10"
                            android:textColor="@color/light1" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/chapters"
                            android:textColor="@color/light1" />
                    </LinearLayout>

                </LinearLayout>
                <!--End detail-->

                <!-- Action -->
                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginVertical="@dimen/_12sdp"
                    android:background="@color/light1" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <LinearLayout
                        style="@style/SelectableItemBackground"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:background="?android:attr/selectableItemBackground"
                        android:paddingBottom="@dimen/_6sdp"
                        android:clickable="true"
                        android:focusable="true"
                        android:gravity="center"
                        android:orientation="vertical">

                        <ImageView
                            android:layout_width="@dimen/_30sdp"
                            android:layout_height="@dimen/_30sdp"
                            android:padding="@dimen/_4sdp"
                            android:scaleType="centerCrop"
                            android:src="@drawable/ic_book"
                            app:tint="@color/light1" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/read_book"
                            android:textColor="@color/light1"
                            android:textSize="@dimen/_12sdp" />

                    </LinearLayout>

                    <LinearLayout
                        style="@style/SelectableItemBackground"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:background="?android:attr/selectableItemBackground"
                        android:paddingBottom="@dimen/_6sdp"
                        android:clickable="true"
                        android:focusable="true"
                        android:gravity="center"
                        android:orientation="vertical">

                        <ImageView
                            android:layout_width="@dimen/_30sdp"
                            android:layout_height="@dimen/_30sdp"
                            android:padding="@dimen/_4sdp"
                            android:src="@drawable/ic_download"
                            app:tint="@color/light1" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/download"
                            android:textColor="@color/light1"
                            android:textSize="@dimen/_12sdp" />

                    </LinearLayout>

                    <LinearLayout
                        style="@style/SelectableItemBackground"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:background="?android:attr/selectableItemBackground"
                        android:paddingBottom="@dimen/_6sdp"
                        android:clickable="true"
                        android:focusable="true"
                        android:gravity="center"
                        android:orientation="vertical">

                        <ImageView
                            android:layout_width="@dimen/_30sdp"
                            android:layout_height="@dimen/_30sdp"
                            android:padding="@dimen/_4sdp"
                            android:scaleType="centerCrop"
                            android:src="@drawable/ic_outline_comment_24"
                            app:tint="@color/light1" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/comments"
                            android:textColor="@color/light1"
                            android:textSize="@dimen/_12sdp" />

                    </LinearLayout>

                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginTop="@dimen/_8sdp"
                    android:background="@color/light1" />
                <!-- End Action -->

                <TextView
                    android:layout_marginTop="@dimen/_12sdp"
                    android:id="@+id/txtNovelDescription"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingHorizontal="@dimen/_16sdp"
                    android:text="@string/lorem"
                    android:textColor="@color/light1" />

                <!-- Recommended -->
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/_4sdp"
                        android:gravity="center_vertical"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:paddingHorizontal="@dimen/padding_horizontal"
                            android:paddingVertical="@dimen/_8sdp"
                            android:text="@string/recommended"
                            android:textColor="@color/white"
                            android:textSize="@dimen/_18sdp"
                            android:textStyle="bold" />

                    </LinearLayout>

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/rcvRecommended"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:paddingHorizontal="@dimen/_4sdp"
                        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                        tools:listitem="@layout/item_novel_portait" />

                </LinearLayout>
                <!-- End Recommended -->

            </LinearLayout>

        </RelativeLayout>

    </ScrollView>

</LinearLayout>