<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/primary"
    tools:context=".fragments.HomeFragment">

    <androidx.core.widget.NestedScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <!-- Slider -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/_10sdp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingHorizontal="@dimen/padding_horizontal"
                    android:paddingVertical="@dimen/_8sdp"
                    android:text="@string/discover"
                    android:textColor="@color/white"
                    android:textSize="@dimen/_18sdp"
                    android:textStyle="bold" />

                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="@dimen/_10sdp"
                    app:cardBackgroundColor="@color/light1"
                    app:cardCornerRadius="@dimen/_6sdp">

                    <com.denzcoskun.imageslider.ImageSlider
                        android:id="@+id/carouselDiscover"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/_150sdp"
                        app:iss_auto_cycle="true"
                        app:iss_delay="0"
                        app:iss_indicator_align="END"
                        app:iss_period="3000" />

                </androidx.cardview.widget.CardView>

            </LinearLayout>
            <!-- End Slider -->

            <!-- Top 10 -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:paddingHorizontal="@dimen/padding_horizontal"
                        android:paddingVertical="@dimen/_8sdp"
                        android:text="@string/top_novel"
                        android:textColor="@color/white"
                        android:textSize="@dimen/_18sdp"
                        android:textStyle="bold" />

                </LinearLayout>

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rcvTop10"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:overScrollMode="never"
                    android:paddingHorizontal="@dimen/_4sdp"
                    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                    tools:itemCount="5"
                    tools:listitem="@layout/item_novel_vertical" />

            </LinearLayout>
            <!-- End Top 10 -->

            <!-- Popular -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:paddingHorizontal="@dimen/padding_horizontal"
                        android:paddingVertical="@dimen/_8sdp"
                        android:text="@string/popular"
                        android:textColor="@color/white"
                        android:textSize="@dimen/_18sdp"
                        android:textStyle="bold" />

                    <LinearLayout
                        android:id="@+id/btnMorePopular"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:background="?android:attr/selectableItemBackground"
                        android:clickable="true"
                        android:focusable="true"
                        android:gravity="center_vertical"
                        android:orientation="horizontal"
                        android:paddingVertical="@dimen/_8sdp"
                        android:paddingStart="@dimen/padding_horizontal"
                        android:paddingEnd="@dimen/_4sdp">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/more"
                            android:textColor="@color/light1"
                            android:textSize="@dimen/_12sdp" />

                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:src="@drawable/ic_arrow_right"
                            app:tint="@color/light1" />

                    </LinearLayout>

                </LinearLayout>

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rcvPopular"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:paddingHorizontal="@dimen/_4sdp"
                    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                    tools:listitem="@layout/item_novel_portait" />

            </LinearLayout>
            <!-- End Popular -->

            <!-- Recent -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:paddingHorizontal="@dimen/padding_horizontal"
                        android:paddingVertical="@dimen/_8sdp"
                        android:text="@string/recent"
                        android:textColor="@color/white"
                        android:textSize="@dimen/_18sdp"
                        android:textStyle="bold" />

                </LinearLayout>

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rcvRecent"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:paddingHorizontal="@dimen/_4sdp"
                    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                    tools:listitem="@layout/item_novel_landscape" />

            </LinearLayout>
            <!-- End Recent -->

            <!-- Recommended -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_4sdp"
                    android:gravity="center_vertical"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:paddingHorizontal="@dimen/padding_horizontal"
                        android:paddingVertical="@dimen/_8sdp"
                        android:text="@string/recommended"
                        android:textColor="@color/white"
                        android:textSize="@dimen/_18sdp"
                        android:textStyle="bold" />

                    <LinearLayout
                        android:id="@+id/btnMoreRecommended"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:background="?android:attr/selectableItemBackground"
                        android:clickable="true"
                        android:focusable="true"
                        android:gravity="center_vertical"
                        android:orientation="horizontal"
                        android:paddingVertical="@dimen/_8sdp"
                        android:paddingStart="@dimen/padding_horizontal"
                        android:paddingEnd="@dimen/_4sdp">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/more"
                            android:textColor="@color/light1"
                            android:textSize="@dimen/_12sdp" />

                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:src="@drawable/ic_arrow_right"
                            android:tint="@color/light1" />

                    </LinearLayout>

                </LinearLayout>

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rcvRecommended"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:paddingHorizontal="@dimen/_4sdp"
                    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                    tools:listitem="@layout/item_novel_portait" />

            </LinearLayout>
            <!-- End Recommended -->

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>

</FrameLayout>